Documentation edits made through Mintlify web editor

--- a/interfejsy/debug.mdx
+++ b/interfejsy/debug.mdx
@@ -69,6 +69,9 @@ Cloudflare kolejkuje rekordy i wysyła je jeden po drugim z pewnym odstępem. Na
 
 - Stan
 - Stan Admin
+- Uwagi
+- Bezpieczeństwo elektryczne
+- Uwagi wew
 
 ### Magazyn
 
